fix to smoe problems detected by inforce
git-svn-id: svn://cserg0.site.uottawa.ca/projetseg/trunk@890 1d5a7336-c65e-6947-a78c-d4236001c669